Fix jump to related functionality

--- a/src/components/UI/Table.module.css
+++ b/src/components/UI/Table.module.css
@@ -7,7 +7,7 @@
 }
 
 .Highlighted {
-  animation: target-fade 5s 1;
+  animation: target-fade 10s 10;
 }
 
 @keyframes target-fade {
